@@ -1,5 +1,8 @@
 Tue Nov 19 12:01:13 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
+	* sighandlers.cc (my_friendly_exit): If we are called twice, try
+	to remove the signal handler for SIGABRT and the call abort ().
+
 	* help.cc (Ftype): If a function is defined from a file and
 	transformed text has not been requested, just print the contents
 	of the file.
